# 587_hw

.cache/clangd/index/: grid_index.h.2D2FAFA3520F3F9A.idx  kd_tree.h.0CD9588E1AB2DDD6.idx  main.cpp.2470D95E8AD800E6.idx  poi.h.5C0B798BAA721751.idx
hw1/: HW1 Results.md  README.md
hw1/code/: CMakeLists.txt
hw1/code/data/: grid_knn_results_0.010000.csv  grid_knn_results_0.050000.csv  grid_knn_results_0.100000.csv  grid_knn_results_0.200000.csv  grid_range_results_0.010000.csv  grid_range_results_0.050000.csv  grid_range_results_0.100000.csv  grid_range_results_0.200000.csv  kd_knn_results.csv  kd_range_results.csv  knn_results.csv  range_results.csv
hw1/code/include/: grid_index.h  kd_tree.h  poi.h
hw1/code/src/: bf_spatial_search.cpp  data_clean.cpp  draw.py  draw_3rd.py  grid_index.cpp  kd_tree.cpp  knn_bfvsg.py  main.cpp  merge_fig.py  qr_bfvsg.py
hw2/: CSCI587_HW2.ipynb  HW2_BowenWang_1454229482.ipynb  sf-attractions.geojson
hw3/: CSCI587_HW3.ipynb
